--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,10 +17,21 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!--Unsplash Api-->
+        <meta-data
+            android:name="tw.com.deathhit.core.unsplash_api.access_key"
+            android:value="[YOUR UNSPLASH ACCESS KEY]" />
+
+        <meta-data
+            android:name="tw.com.deathhit.core.unsplash_api.app_name"
+            android:value="Sunflower Clone" />
+
+        <meta-data
+            android:name="tw.com.deathhit.core.unsplash_api.server_url"
+            android:value="https://api.unsplash.com/" />
+    </application>
 </manifest>
