--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ junitVersion = "1.2.1"
 kotlin = "1.9.20"
 material = "1.12.0"
 navigation = "2.7.7"
+paging = "3.3.0"
 work = "2.9.0"
 
 [libraries]
@@ -36,6 +37,10 @@ material = { group = "com.google.android.material", name = "material", version.r
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
+paging-common = { group = "androidx.paging", name = "paging-common-ktx", version.ref = "paging" }
+paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
+paging-runtime = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging" }
+paging-test = { group = "androidx.paging", name = "paging-testing", version.ref = "paging" }
 work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 
 [plugins]
