--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ kotlin = "1.9.20"
 material = "1.12.0"
 navigation = "2.7.7"
 paging = "3.3.0"
+room = "2.6.1"
 work = "2.9.0"
 
 [libraries]
@@ -41,6 +42,10 @@ paging-common = { group = "androidx.paging", name = "paging-common-ktx", version
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
 paging-runtime = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging" }
 paging-test = { group = "androidx.paging", name = "paging-testing", version.ref = "paging" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-paging = { group = "androidx.room", name = "room-paging", version.ref = "room" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 
 [plugins]
