--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,30 +1,31 @@
 [versions]
-agp = "8.5.2"
+agp = "8.7.3"
 appcompat = "1.7.0"
-compose-bom = "2024.06.00"
-constraintlayout = "2.1.4"
-constraintlayout-compose = "1.0.1"
-coreKtx = "1.13.1"
-coroutine = "1.8.1"
+compose-bom = "2024.12.01"
+constraintlayout = "2.2.0"
+constraintlayout-compose = "1.1.0"
+coreKtx = "1.15.0"
+coroutine = "1.10.1"
 espressoCore = "3.6.1"
-fragmentKtx = "1.8.2"
+fragmentKtx = "1.8.5"
 glide = "4.16.0"
 glide-compose = "1.0.0-beta01"
 gson = "2.11.0"
-hilt = "2.51.1"
+hilt = "2.54"
 hilt-integration = "1.2.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
-kotlin = "1.9.20"
+kotlin = "2.1.0"
+ksp = "2.0.21-1.0.27"
 material = "1.12.0"
-navigation = "2.7.7"
-paging = "3.3.2"
+navigation = "2.8.5"
+paging = "3.3.5"
 recyclerview = "1.3.2"
 retrofit = "2.11.0"
 room = "2.6.1"
-viewmodel-compose = "2.8.4"
+viewmodel-compose = "2.8.7"
 viewpager2 = "1.1.0"
-work = "2.9.1"
+work = "2.10.0"
 
 [libraries]
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
@@ -73,8 +74,10 @@ work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+androidx-room = { id = "androidx.room", version.ref = "room" }
 google-dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+jetbrains-kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-jetbrains-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 jetbrains-kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
