--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ paging = "3.3.5"
 recyclerview = "1.4.0"
 retrofit = "2.11.0"
 room = "2.6.1"
+sqldelight = "2.0.2"
 viewmodel-compose = "2.8.7"
 viewpager2 = "1.1.0"
 work = "2.10.0"
@@ -76,6 +77,7 @@ work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 androidx-room = { id = "androidx.room", version.ref = "room" }
+cash-sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
 google-dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
